<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ta\'s book</string>
    <string name="str_about">关于</string>
    <string name="str_about_msg">Copyright 2011 @ MaJi, All Rights Reserved.</string>
    <string name="str_exit">退出</string>
    <string name="str_exit_msg">确认要退出吗？</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="prompt_text">抱歉，数据请求失败</string>
    <string name="string_test_read">试读下载</string>
    <string name="string_buy_book">立即购买</string>
    <string name="try_again">重试</string>
    <string name="string_btn_see_comment">查看全部评论</string>
    <string name="string_all_comment">全部评论</string>
    <string name="string_btn_no_comment">暂无评论</string>
    <string name="comment">评论</string>
    <string name="comment_detail_no_content">暂无内容</string>
    <string name="comment_title_tip">标题</string>
    <string name="comment_title_wordnum">最多可输入25个字</string>
    <string name="comment_content_word">请输入评论内容</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_scan">图书扫描</string>
    <string name="button_upload">上传结果</string>
    <string name="result_scan">扫描结果为：%s</string>
    <string name="result_getting">正在向豆瓣请求数据</string>
    <string name="book_item_price">电子书价：</string>
    <string name="book_info">图书信息：\n\t书名：%1$s\n\t作者：%2$s\n\t出版社：%3$s\n\tISBN：%4$s\n\t简介：%5$s </string>
    <string name="borrow_book">借书</string>
    <string name="return_book">还书</string>
    <string name="manager_user">管理用户</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="string_book_info_detail">书籍详情</string>
    <string name="add_income_money">请输入图书名字：</string>
    <string name="add_income_isbn">请输入图书isbn号：</string>
    <string name="add_income_reason">记一下备注吧：</string>
    <string name="add_income_title">图书的标题：</string>
    <string name="add_income_summary">图书的简介：</string>
    <string name="add_income">写一下推荐语吧：</string>
    <string name="add_income_text_left">还可以输入100字</string>
    <string name="add_income_tag">写一下标签吧：</string>
    <string name="add_income_text_submit">提交</string>
    <string name="mybook">我的书架</string>
    <string name="version">版本</string>
    <string name="password_hint">密码</string>
    <string name="toast_error_username_null">帐号名不能为空</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_password_error">两次密码不一致</string>
    <string name="toast_error_phone_null">手机号不能为空</string>
    <string name="toast_error_signup">注册失败</string>
    <string name="toast_success_signin">登录成功</string>
    <string name="toast_error_signin">登录失败</string>
    <string name="toast_success_sign_up">注册成功</string>
    <string name="email_hint">帐号</string>
    <string name="email_confirm_hint">确认帐号</string>
    <string name="agreement">By signing up you agree to our terms and honor code.</string>
    <string name="sample_version_code">(100)</string>
    <string name="sample_version_name">1.0.0</string>
    <string name="create_new_account">创建新帐号</string>
    <string name="new_to_tasbook">还没有加入“他死不可”？</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="fullname_hint">账号名</string>
    <string name="mybookshelf">我的书架</string>
    <string name="string_book_detail_title">本书详细信息</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="login">登录</string>
    <string name="comfirm_password_hint">确认密码</string>
    <string name="phone_hint">手机号</string>
    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="ver">版本: v1.0.0</string>
    <string name="size">大小: 13MB</string>
    <string name="mgr">管理</string>
    <string name="name">应用Demo</string>
    <string name="image_desc">图片</string>
    <string name="btn_state_title">按钮显示文字表示当前ListView的设置状态</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_ing">正在加载中</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>

</resources>