<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/home_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scan" />

    <TextView
        android:id="@+id/home_result_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/home_book_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/home_upload_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_upload" />
*
    <TextView
        android:id="@+id/home_result_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/home_borrow_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrow_book" />

        <Spinner
            android:id="@+id/home_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />
    </LinearLayout>

    <Button
        android:id="@+id/home_return_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_book" />

    <Button
        android:id="@+id/home_user_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_user" />

</LinearLayout>