<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffede0c8"
    android:orientation="vertical" >
     <include
        android:id="@+id/actionbar_title"
        android:layout_height="@dimen/action_bar_height"
        layout="@layout/actionbar_title" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:padding="@dimen/login_screen_min_padding" >

            <requestFocus />

            <LinearLayout
                android:id="@id/login_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <Space
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        tools:ignore="NewApi" />

                    <ImageView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.0dip"
                        android:layout_weight="19.0"
                        android:scaleType="centerInside"
                        android:src="@drawable/tasbook" />

                    <Space
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        tools:ignore="NewApi" />

                </LinearLayout>

                <EditText
                    android:id="@id/login_email_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="40.0dip"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@id/login_password_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="10.0dip"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <com.digdream.tasbook.view.TasbookButton
                    android:id="@id/login_sign_in_button"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="30.0dip"
                    android:background="@drawable/sign_in_button"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@drawable/sign_in_button_text" />

                <com.digdream.tasbook.view.TasbookTextView
                    style="@style/SmallTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="18.0dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="20.0dip"
                    android:text="@string/new_to_tasbook"
                    android:textColor="@color/tasbookDarkTextColour" />

                <com.digdream.tasbook.view.TasbookButton
                    android:id="@id/login_create_account_button"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="20.0dip"
                    android:background="@drawable/create_account_button"
                    android:gravity="center"
                    android:text="@string/create_new_account"
                    android:textColor="@drawable/create_account_button_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="17.0dip"
                    android:layout_marginTop="17.0dip"
                    android:orientation="horizontal" >

                    <com.digdream.tasbook.view.TasbookTextView
                        style="@style/SmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="17.0dip"
                        android:text="@string/version"
                        android:textColor="@color/tasbookDarkTextColour" />

                    <com.digdream.tasbook.view.TasbookTextView
                        android:id="@id/version_name"
                        style="@style/SmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:hint="@string/sample_version_name"
                        android:textColor="@color/tasbookDarkTextColour" />

                    <com.digdream.tasbook.view.TasbookTextView
                        android:id="@id/version_code"
                        style="@style/SmallTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:hint="@string/sample_version_code"
                        android:textColor="@color/tasbookDarkTextColour" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>